--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,82 @@
-# remap prefix to Control + a
-set -g prefix C-a
-unbind C-b
-bind C-a send-prefix
+# Setting 256 color
+# set -g default-terminal "tmux-256color" 
+set -g default-terminal "tmux" 
 
+set -g history-limit 20000
+
+# remap prefix to Control + a
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+bind a send-prefix # to be able to jump to beginning of the line
+
+
+# reload config file
+bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
+
+# quick pane cycling 
+# unbind C-a
+bind C-n select-pane -t :.+
+
+# Switch to last known window (not previous)
+unbind C-a
+bind C-a last-window
+
+
+# Numbering windows
+set -g renumber-windows on
 # Start window numering at 1
 set -g base-index 1
+setw -g pane-base-index 1
 
-# force a reload of the config file
-unbind r
-bind r source-file ~/.tmux.conf
+# Naming windows
+set-option -g set-titles on
+set-option -g set-titles-string "#T - #W"
+set-window-option -g automatic-rename o:
 
-# quick pane cycling (TODO not working, figure out
-# unbind ^A
-# bind ^A select-pane -t :.+
+######################
+#### Key Bindings ####
+######################
 
+# split window and fix path for tmux 1.9
+bind | split-window -h
+bind - split-window
 
+# synchronize all panes in a window
+# bind y setw synchronize-panes
+
+# pane movement shortcuts
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
+bind -r C-h select-window -t :-
+bind -r C-l select-window -t :+
+
+# Resize pane shortcuts
+bind -r H resize-pane -L 7
+bind -r J resize-pane -D 7
+bind -r K resize-pane -U 7
+bind -r L resize-pane -R 7
+
+######################
+
+# enable mouse support for switching panes/windows
+setw -g mouse on
+
+# set vi mode for copy mode
+setw -g mode-keys vi
+setw -g xterm-keys on
+
+# more settings to make copy-mode more vim-like
+unbind [
+bind Escape copy-mode
+# Conflicts with previous screen
+# unbind p
+# bind p paste-buffer
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-selection
 
 ### Vim aware using vim plugin: christoomey/vim-tmux-navigator
 # smart pane switching with awareness of vim splits
