tmux, tmuxp updates

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,21 +6,21 @@ set -g history-limit 20000
 
 # remap prefix to Control + a
 unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
-bind a send-prefix # to be able to jump to beginning of the line
+set -g prefix C-o
+bind C-o send-prefix
+# bind a send-prefix # to be able to jump to beginning of the line
 
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
 # quick pane cycling 
-# unbind C-a
 bind C-n select-pane -t :.+
 
 # Switch to last known window (not previous)
 unbind C-a
 bind C-a last-window
+bind C-o last-window
 
 
 # Numbering windows
@@ -43,7 +43,7 @@ bind | split-window -h
 bind - split-window
 
 # synchronize all panes in a window
-# bind y setw synchronize-panes
+bind y setw synchronize-panes
 
 # pane movement shortcuts
 bind h select-pane -L
