tmux update, mouse, escape/copy mode like VIM

--- a/tmux.conf
+++ b/tmux.conf
@@ -32,7 +32,9 @@ setw -g pane-base-index 1
 # Naming windows
 set-option -g set-titles on
 set-option -g set-titles-string "#T - #W"
-set-window-option -g automatic-rename o:
+# set-window-option -g automatic-rename o:
+set-option -g allow-rename off
+
 
 ######################
 #### Key Bindings ####
@@ -43,7 +45,7 @@ bind | split-window -h
 bind - split-window
 
 # synchronize all panes in a window
-bind y setw synchronize-panes
+# bind y setw synchronize-panes
 
 # pane movement shortcuts
 bind h select-pane -L
@@ -62,21 +64,26 @@ bind -r L resize-pane -R 7
 
 ######################
 
-# enable mouse support for switching panes/windows
-setw -g mouse on
-
-# set vi mode for copy mode
-setw -g mode-keys vi
-setw -g xterm-keys on
-
 # more settings to make copy-mode more vim-like
 unbind [
 bind Escape copy-mode
 # Conflicts with previous screen
 # unbind p
 # bind p paste-buffer
-# bind -t vi-copy 'v' begin-selection
-# bind -t vi-copy 'y' copy-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -sel clip -i"
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi V send-keys -X select-line
+
+# Mouse options for tmux >= 2.5
+set-option -g -q mouse on
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
+
+# set vi mode for copy mode
+setw -g mode-keys vi
+setw -g xterm-keys on
 
 ### Vim aware using vim plugin: christoomey/vim-tmux-navigator
 # smart pane switching with awareness of vim splits
