tmux, shell alias for ssh

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # Setting 256 color
 # set -g default-terminal "tmux-256color" 
 set -g default-terminal "tmux" 
+# set -g default-terminal "xterm"
 
 set -g history-limit 20000
 
@@ -45,7 +46,7 @@ bind | split-window -h
 bind - split-window
 
 # synchronize all panes in a window
-# bind y setw synchronize-panes
+bind y setw synchronize-panes
 
 # pane movement shortcuts
 bind h select-pane -L
@@ -67,6 +68,8 @@ bind -r L resize-pane -R 7
 # more settings to make copy-mode more vim-like
 unbind [
 bind Escape copy-mode
+set-option -s escape-time 0             # No delay when hitting escape
+
 # Conflicts with previous screen
 # unbind p
 # bind p paste-buffer
@@ -92,4 +95,7 @@ setw -g xterm-keys on
 # bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 # bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 # bind -n ^A run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
+
+### Plugin ###
+run-shell ~/git/tmux-resurrect/resurrect.tmux
 
