tmux, vim, mouse capability

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 # Setting 256 color
 # set -g default-terminal "tmux-256color" 
-set -g default-terminal "tmux" 
-# set -g default-terminal "xterm"
+# set -g default-terminal "tmux" 
+set -g default-terminal "xterm-256color"
 
 set -g history-limit 20000
 
