vimrc mouse mode, tmux mouse and plugins, install profile update

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,7 @@
 # set -g default-terminal "tmux-256color" 
 # set -g default-terminal "tmux" 
 set -g default-terminal "xterm-256color"
+# set -g default-terminal "xterm"
 
 set -g history-limit 20000
 
@@ -78,11 +79,12 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi V send-keys -X select-line
 
 # Mouse options for tmux >= 2.5
-set-option -g -q mouse on
-bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
-bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
-bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
-bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
+set -g -q mouse on
+# setw -g mouse on
+# bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+# bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
+# bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
+# bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
 # set vi mode for copy mode
 setw -g mode-keys vi
@@ -90,12 +92,20 @@ setw -g xterm-keys on
 
 ### Vim aware using vim plugin: christoomey/vim-tmux-navigator
 # smart pane switching with awareness of vim splits
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
+bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
+bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
+bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
+bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
 # bind -n ^A run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 ### Plugin ###
-run-shell ~/git/tmux-resurrect/resurrect.tmux
+# Load new plugins: prefix + I
+# Update plugins: prefix + U
+# Uninstall plugins: prefix + alt + u
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'nhdaly/tmux-better-mouse-mode'
+
+# Keep at the bottom
+run '~/.tmux/plugins/tpm/tpm'
 
