--- a/tmux.conf
+++ b/tmux.conf
@@ -4,14 +4,17 @@
 set -g default-terminal "xterm-256color"
 # set -g default-terminal "xterm"
 
+# set vi mode for copy mode
+setw -g mode-keys vi
+setw -g xterm-keys on
+
 set -g history-limit 20000
 
-# remap prefix to Control + a
+# remap prefix to Control + o
 unbind C-b
 set -g prefix C-o
 bind C-o send-prefix
-# bind a send-prefix # to be able to jump to beginning of the line
-
+bind C-o last-window
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
@@ -20,9 +23,9 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 bind C-n select-pane -t :.+
 
 # Switch to last known window (not previous)
-unbind C-a
-bind C-a last-window
-bind C-o last-window
+# unbind C-a
+unbind -Troot C-a 
+# bind C-a start-of-line
 
 
 # Numbering windows
@@ -59,10 +62,10 @@ bind -r C-h select-window -t :-
 bind -r C-l select-window -t :+
 
 # Resize pane shortcuts
-bind -r H resize-pane -L 7
-bind -r J resize-pane -D 7
-bind -r K resize-pane -U 7
-bind -r L resize-pane -R 7
+bind -r H resize-pane -L 10
+bind -r J resize-pane -D 10
+bind -r K resize-pane -U 10
+bind -r L resize-pane -R 10
 
 ######################
 
@@ -86,9 +89,6 @@ set -g -q mouse on
 # bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
 # bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
 
-# set vi mode for copy mode
-setw -g mode-keys vi
-setw -g xterm-keys on
 
 ### Vim aware using vim plugin: christoomey/vim-tmux-navigator
 # smart pane switching with awareness of vim splits
@@ -96,7 +96,6 @@ bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n ^A run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 ### Plugin ###
 # Load new plugins: prefix + I
